# TexViewer

./: .gitmodules  CMakeLists.txt  Compiling.md  LICENSE  README.md
.github/workflows/: build.yaml
include/: ConverterBlockCompressed.h  ImageViewer.h  MainWindow.h  Meta.h.in  Pow2Spinbox.h  ZoomableLabel.h
lib/: CMakeLists.txt
src/: ConverterASTC.cpp  ConverterBPTC.cpp  ConverterBlockCompressed.cpp  ConverterETC.cpp  ConverterUncompressed.cpp  ImageViewer.cpp  MainWindow.cpp  Pow2SpinBox.cpp  ZoomableLabel.cpp
ui/: MainWindow.ui
